--- a/slides/index.html
+++ b/slides/index.html
@@ -25,7 +25,7 @@
 		<div class="reveal">
 			<div class="slides">
 
-				<!-- SLIDE 1 title -->
+				<!-- SLIDE 0 title -->
 				<section data-background-image="images/00_logo.png" data-background-position="10% 90%" data-background-size="10%">
 					<h2>fDOG</h2>
 					<h2>Feature-aware Directed OrtholoG search</h2>
@@ -34,7 +34,7 @@
 					<h4>Vinh Tran</h4>
 				</section>
 
-				<!-- SLIDE 2 orthology -->
+				<!-- SLIDE 1 orthology -->
 				<section>
 					<h5 style="color: white; background-color: #559951"><strong>Orthology</strong></h5>
 					<section>
@@ -75,48 +75,58 @@
 					</aside>
 				</section>
 
-				<!-- SLIDE 3 fdog origin -->
+				<!-- SLIDE 2 fdog origin -->
 				<section>
 					<h5 style="color: white; background-color: #559951"><strong>The origin of fDOG</strong></h5>
 					<section>
 						<p>HaMStR</p>
 						<img src="images/021_hamstr_paper.png" style='float: top; border:0; box-shadow: none' height=150/>
 						<p>
-							<iframe src="https://giphy.com/embed/d1E2IByItLUuONMc" width="95" height="120" frameBorder="0" class="giphy-embed"></iframe>
+							<img src="images/021_hamstr.gif" style='float: top; border:0; box-shadow: none' height=120/>
 						</p>
 					</section>
 					<section>
 						<p>HaMStR</p>
 						<p>
-							<iframe src="https://giphy.com/embed/HrB1MUATg24Ra" width="125" height="120" frameBorder="0" class="giphy-embed"></iframe>
+							<img src="images/022_hamstr.gif" style='float: top; border:0; box-shadow: none' height=120/>
 						</p>
 						<img src="images/022_hamstr_workflow.png" style='float: top; border:0; box-shadow: none' height=350/>
 					</section>
 					<section>
 						<p>
 							<div style="width:500px; margin:0 auto;">
-								<div style="float:left; width:100 px"><iframe src="https://giphy.com/embed/fGCqvevBdwJdo4s1qb" width="120" height="120" frameBorder="0" class="giphy-embed" ></iframe></div>
+								<img src="images/023_carrot.gif" style='float: top; border:0; box-shadow: none' height=120/>
 								+
-								<div style="float:right; width:100 px"><iframe src="https://giphy.com/embed/d1E2IByItLUuONMc" width="95" height="120" frameBorder="0" class="giphy-embed"></iframe></div>
+								<img src="images/021_hamstr.gif" style='float: top; border:0; box-shadow: none' height=120/>
 								<div style="float:center; width:100 px"><img src="images/023_arrow.png" style='float: center; border:0; box-shadow: none' height=100/></div>
 							</div>
 						</p>
 						<p>
-							<div style="float:center; margin:100 100; width:100 px"><iframe src="https://giphy.com/embed/3o7abAHdYvZdBNnGZq" width="240" height="240" frameBorder="0" class="giphy-embed" ></iframe></div>
-						</p>
-						<p>fDOG</p>
+							<img src="images/023_dog.gif" style='float: top; border:0; box-shadow: none' height=180/>
+						<br>fDOG</p>
 					</section>
 					<aside class="notes">
 						Oh hey, these are some notes. They'll be hidden in your presentation, but you can see them if you open the speaker notes window (hit »S« on your keyboard).
 					</aside>
 				</section>
 
-				<!-- SLIDE 3 comparison -->
+				<!-- SLIDE 3 fdog workflow -->
+				<section>
+					<h5 style="color: white; background-color: #559951"><strong>How fDOG works</strong></h5>
+					<section>
+
+					</section>
+					<aside class="notes">
+						Oh hey, these are some notes. They'll be hidden in your presentation, but you can see them if you open the speaker notes window (hit »S« on your keyboard).
+					</aside>
+				</section>
+
+				<!-- SLIDE 4 comparison -->
 				<section>
 					<h5 style="color: white; background-color: #559951"><strong>How good is fDOG</strong></h5>
 					<section>
 						<p>Benchmark data</p>
-						<img src="images/031_qfo.png" style='float: top; border:0' height=250/>
+						<img src="images/041_qfo.png" style='float: top; border:0' height=250/>
 						<p>
 							<ul>
 								<li style="font-size:20px">78 taxa QfO 2018</li>
@@ -127,20 +137,19 @@
 					</section>
 					<section>
 						<p>Benchmark method</p>
-						<p><img src="images/032_benchmark_service.png" style='float: top; border:0' height=50/></p>
-						<p><img src="images/033_benchmark_service.png" style='float: top; border:0; box-shadow: none' height=350/></p>
+						<p><img src="images/042_benchmark_service.png" style='float: top; border:0' height=50/></p>
+						<p><img src="images/043_benchmark_service.png" style='float: top; border:0; box-shadow: none' height=350/></p>
 					</section>
 					<section>
 						<p>Result</p>
 						<p>
 							<ul>
 								<li style="font-size:20px">78 taxa QfO 2018</li>
-								<img src="images/034_coreSize.png" style='float: top; border:0' height=250/ class="fragment roll-in">
+								<img src="images/044_coreSize.png" style='float: top; border:0' height=250/ class="fragment roll-in">
 								<li style="font-size:20px">Human as reference species</li>
 								<li style="font-size:20px">20.996 human proteins as seed sequences</li>
 							</ul>
 						</p>
-
 						<img src="images/024_orthoInput.png" style='float: top; border:0' height=250/ class="fragment roll-in">
 						<img src="images/025_annoInput.png" style='float: top; border:0' height=250/ class="fragment roll-in">
 						<img src="images/027_omaLogo.png" style='float: top; border:0' height=150 class="fragment roll-in">
@@ -151,29 +160,29 @@
 					</aside>
 				</section>
 
-				<!-- SLIDE 4 core groups -->
+				<!-- SLIDE 5 core groups -->
 				<section>
 					<h5 style="color: white; background-color: #559951"><strong>How meaningful are the core ortholog groups</strong></h5>
 					<section>
-						<img src="images/041_qfotree.png" style='float: top; border:0; box-shadow: none' height=350/>
+						<img src="images/051_qfotree.png" style='float: top; border:0; box-shadow: none' height=350/>
 						<p>... in reflecting the species relationship</p>
 					</section>
 					<section>
 						<ul>
 							<li style="font-size:20px">
 								<p>Topology test with <a target="_blank" href="http://www.iqtree.org">IQ-TREE</a></p>
-								<img src="images/042_testOutput.png" style='float: top; border:0; box-shadow: none' height=150/>
-								<p style="font-size:15px">(Topology rejected (-) when p-AU < 0.05, otherwise accepted (+))</p>
+								<img src="images/052_testOutput.png" style='float: top; border:0; box-shadow: none' height=150/>
+								<p style="font-size:15px"><i>(Topology rejected (-) when p-AU < 0.05, otherwise accepted (+))</i></p>
 							</li>
 							<li style="font-size:20px" class="fragment roll-in">
 								<p>18,067 core groups with more than 3 sequences</p>
-								<img src="images/043_coreSize.png" style='float: top; border:0; box-shadow: none' height=200/>
+								<img src="images/053_coreSize.png" style='float: top; border:0; box-shadow: none' height=200/>
 							</li>
 						</ul>
 						</p>
 					</section>
 					<section>
-						<table style="font-size:20px">
+						<table style="font-size:15px">
 							<tr>
 								<th>Approach</th>
 								<th>Accepted</th>
@@ -195,21 +204,21 @@
 								<td>2,043 (11.31%)</td>
 							</tr>
 						</table>
-						<img src="images/044_topoStat.png" style='float: top; border:0; box-shadow: none' height=300>
+						<img src="images/054_topoStat.png" style='float: top; border:0; box-shadow: none' height=300>
 					</section>
 					<section>
-						<img src="images/045_pvalue_vs_dlogl.png" style='float: top; border:0; box-shadow: none' height=350>
+						<img src="images/055_pvalue_vs_dlogl.png" style='float: top; border:0; box-shadow: none' height=350>
 					</section>
 					<section>
-						<img src="images/046_concord.png" style='float: top; border:0; box-shadow: none' height=300>
+						<img src="images/056_concord.png" style='float: top; border:0; box-shadow: none' height=300>
 					</section>
 				</section>
 
-				<!-- SLIDE 5 runtime -->
+				<!-- SLIDE 6 runtime -->
 				<section>
 					<h5 style="color: white; background-color: #559951"><strong>How fast is fDOG</strong></h5>
 					<section>
-						<table style="font-size:20px">
+						<table style="font-size:15px">
 							<tr>
 								<th>Data set</th>
 								<th>Core compilation</th>
@@ -235,18 +244,36 @@
 						</i></p>
 					</section>
 					<section>
-						<img src="images/051_hmsruntime.png" style='float: top; border:0; box-shadow: none' height=400>
+						<img src="images/061_hmsruntime.png" style='float: top; border:0; box-shadow: none' height=300>
+						<br>
+						<p style="font-size:20px">On average, each human protein needs:</p>
+						<!-- <br> -->
+						<ul style="font-size:15px">
+							<li>
+								<p>212s for the core compilation</p>
+							</li>
+							<li>
+								<p>10s for the ortholog search</p>
+							</li>
+						</ul>
+						<p style="font-size:10px"><i>Note: number of core taxa and search taxa are the same (78 QfO taxa)</i></p>
 					</section>
 					<section>
-						<p style="font-size:20px">Get protein sequence</p>
-						<img src="images/042_getSeq3.png" style='float: top; border:0' width=750/>
-						<img src="images/042_getSeq4.png" style='float: top; border:0' width=750/ class="fragment roll-in">
+						<img src="images/062_hmsruntime_vsLen.png" style='float: top; border:0; box-shadow: none' width=650/>
+						<div class="caption" style="font-size:15px"><i>Pearson p-value < 2.2e-16<br>Correlation coefficient 0.61 for core compilation and 0.24 for ortholog search</i></div>
 					</section>
 					<section>
-						<p style="font-size:20px">Get protein annotation</p>
-						<img src="images/043_domain1.png" style='float: top; border:0' width=700/>
-						<img src="images/043_domain2.png" style='float: top; border:0' width=700/ class="fragment roll-in">
-						<img src="images/043_domain3.png" style='float: top; border:0' width=700/ class="fragment roll-in">
+						<p style="color: #5e9ca0; font-size:20px">fdog.run<span style="color: #000000;"> VS</span> <span style="color: #ff0000;">fdogs.run</span>
+						<br>
+							<div style="width:500px; margin:0 auto;">
+								<img src="images/063_fdog.gif" style='float: left; border:0' height="150"/>
+								<img src="images/063_fdogs.gif" style='float: right; border:0' height="150"/>
+							</div>
+						</p>
+						<div class="fragment roll-in">
+							<img src="images/063_fdog_vs_fdogs.png" style='float: top; border:0; box-shadow: none' width=500/>
+							<p style="font-size:10px"><i>Runtime of 6 randomly selected proteins using 4 CPUs</i></p>
+						</div>
 					</section>
 					<section>
 						<p style="font-size:20px">Get orthologous group</p>
@@ -254,20 +281,13 @@
 						<img src="images/044_og2.png" style='float: top; border:0' width=700/ class="fragment roll-in">
 						<img src="images/044_og3.png" style='float: top; border:0' width=700/ class="fragment roll-in">
 					</section>
-					<section>
-						<p style="font-size:20px">Run for multiple seed proteins</p>
-						<img src="images/045_loop.png" style='float: top; border:0' width=800/>
-					</section>
-					<section data-gif="repeat">
-						<img src="images/045_yes.gif" style='float: top; border:0' width=500/>
-					</section>
 				</section>
 
 				<!-- SLIDE 6 case study -->
 				<section>
-					<h5 style="color: white; background-color: #559951"><strong>Other use cases</strong></h5>
+					<h5 style="color: white; background-color: #559951"><strong>An use-case: Asgard species tree reconstruction</strong></h5>
 					<section>
-						<p><img src="images/051_biopython.png" style='float: top; border:0' height=100/></p>
+						<p><img src="images/071_hypotheses.png" style='float: top; border:0; box-shadow: none' height=350/></p>
 						<ul>
 							<li style="font-size:20px" class="fragment roll-in">Get sequence info from different databases (e.g. NCBI, PDB,...)</li>
 							<li style="font-size:20px" class="fragment roll-in">Perform sequence alignment with e.g. MAFFT, Clustal, T-Coffee, etc.</li>
