--- a/slides/index.html
+++ b/slides/index.html
@@ -47,7 +47,7 @@
 							</ul>
 						</p>
 					</section>
-					<section>
+					<section data-transition="none">
 						<p>Applications</p>
 						<p>
 							<li style="font-size:20px; text-align:left">Phylogenetic profiles</li>
@@ -61,7 +61,7 @@
 							<li style="font-size:20px; text-align:left">...</li>
 						</p>
 					</section>
-					<section>
+					<section data-transition="none">
 						<p>RBH-based method</p>
 						<p>
 							<a>
@@ -78,21 +78,21 @@
 				<!-- SLIDE 2 fdog origin -->
 				<section>
 					<h5 style="color: white; background-color: #559951"><strong>The origin of fDOG</strong></h5>
-					<section>
+					<section data-transition="none">
 						<p>HaMStR</p>
 						<img src="images/021_hamstr_paper.png" style='float: top; border:0; box-shadow: none' height=150/>
 						<p>
 							<img src="images/021_hamstr.gif" style='float: top; border:0; box-shadow: none' height=120/>
 						</p>
 					</section>
-					<section>
+					<section data-transition="none">
 						<p>HaMStR</p>
 						<p>
 							<img src="images/022_hamstr.gif" style='float: top; border:0; box-shadow: none' height=120/>
 						</p>
 						<img src="images/022_hamstr_workflow.png" style='float: top; border:0; box-shadow: none' height=350/>
 					</section>
-					<section>
+					<section data-transition="none">
 						<p>
 							<div style="width:500px; margin:0 auto;">
 								<img src="images/023_carrot.gif" style='float: top; border:0; box-shadow: none' height=120/>
@@ -113,8 +113,14 @@
 				<!-- SLIDE 3 fdog workflow -->
 				<section>
 					<h5 style="color: white; background-color: #559951"><strong>How fDOG works</strong></h5>
-					<section>
-
+					<section data-transition="none">
+						<img src="images/031_fdog_workflow.jpg" style='float: top; border:0; box-shadow: none' height=550/>
+					</section>
+					<section data-transition="none">
+						<img src="images/032_fdog_workflow.jpg" style='float: top; border:0; box-shadow: none' height=550/>
+					</section>
+					<section data-transition="none">
+						<img src="images/033_fdog_workflow.jpg" style='float: top; border:0; box-shadow: none' height=550/>
 					</section>
 					<aside class="notes">
 						Oh hey, these are some notes. They'll be hidden in your presentation, but you can see them if you open the speaker notes window (hit »S« on your keyboard).
@@ -124,7 +130,7 @@
 				<!-- SLIDE 4 comparison -->
 				<section>
 					<h5 style="color: white; background-color: #559951"><strong>How good is fDOG</strong></h5>
-					<section>
+					<section data-transition="none">
 						<p>Benchmark data</p>
 						<img src="images/041_qfo.png" style='float: top; border:0' height=250/>
 						<p>
@@ -135,19 +141,19 @@
 							</ul>
 						</p>
 					</section>
-					<section>
+					<section data-transition="none">
 						<p>Benchmark method</p>
 						<p><img src="images/042_benchmark_service.png" style='float: top; border:0' height=50/><br>
 						<img src="images/043_benchmark_service.png" style='float: top; border:0; box-shadow: none' height=350/><br>
 						</p>
 					</section>
-					<section>
+					<section data-transition="none">
 						<img src="images/044_count.png" style='float: top; border:0; box-shadow: none' height=250/>
 						<ul>
 							<li style="font-size:15px">Compared using Quest for Orthologs - Challenge 6</li>
 						</ul>
 					</section>
-					<section>
+					<section data-transition="none">
 						<img src="images/045_ec.png" style='float: top; border:0; box-shadow: none' height=200/>
 						<img src="images/046_go.png" style='float: top; border:0; box-shadow: none' height=200/ class="fragment roll-in">
 						<img src="images/047_tree.png" style='float: top; border:0; box-shadow: none' height=200/ class="fragment roll-in">
@@ -161,11 +167,11 @@
 				<!-- SLIDE 5 core groups -->
 				<section>
 					<h5 style="color: white; background-color: #559951"><strong>How meaningful are the core ortholog groups</strong></h5>
-					<section>
+					<section data-transition="none">
 						<img src="images/051_qfotree.png" style='float: top; border:0; box-shadow: none' height=350/>
 						<p>... in reflecting the species relationship</p>
 					</section>
-					<section>
+					<section data-transition="none">
 						<ul>
 							<li style="font-size:20px">
 								<p>Topology test using <a target="_blank" href="http://www.iqtree.org">IQ-TREE</a></p>
@@ -179,7 +185,7 @@
 						</ul>
 						</p>
 					</section>
-					<section>
+					<section data-transition="none">
 						<table style="font-size:15px">
 							<tr>
 								<th>Approach</th>
@@ -204,10 +210,10 @@
 						</table>
 						<img src="images/054_topoStat.png" style='float: top; border:0; box-shadow: none' height=300>
 					</section>
-					<section>
+					<section data-transition="none">
 						<img src="images/055_pvalue_vs_dlogl.png" style='float: top; border:0; box-shadow: none' height=350>
 					</section>
-					<section>
+					<section data-transition="none">
 						<img src="images/056_concord.png" style='float: top; border:0; box-shadow: none' height=300>
 					</section>
 				</section>
@@ -215,7 +221,7 @@
 				<!-- SLIDE 6 runtime -->
 				<section>
 					<h5 style="color: white; background-color: #559951"><strong>How fast is fDOG</strong></h5>
-					<section>
+					<section data-transition="none">
 						<table style="font-size:15px">
 							<tr>
 								<th>Data set</th>
@@ -241,7 +247,7 @@
 							(**) <b>fdog.run</b> using 1 CPU on compute12 (intel i7-6700K 4.0Ghz)
 						</i></p>
 					</section>
-					<section>
+					<section data-transition="none">
 						<img src="images/061_hmsruntime.png" style='float: top; border:0; box-shadow: none' height=250>
 						<br>
 						<p style="font-size:20px">On average, each human protein needs:</p>
@@ -256,16 +262,16 @@
 						</ul>
 						<p style="font-size:10px"><i>Note: number of core taxa and search taxa are the same (78 QfO taxa)</i></p>
 					</section>
-					<section>
+					<section data-transition="none">
 						<img src="images/062_hmsruntime_vsLen.png" style='float: top; border:0; box-shadow: none' width=650/>
 						<div class="caption" style="font-size:15px"><i>Pearson p-value < 2.2e-16<br>Correlation coefficient 0.61 for core compilation and 0.24 for ortholog search</i></div>
 					</section>
-					<section>
+					<section data-transition="none">
 						<p style="color: #5e9ca0; font-size:20px">fdog.run<span style="color: #000000;"> VS</span> <span style="color: #ff0000;">fdogs.run</span>
 						<br>
 							<div style="width:500px; margin:0 auto;">
-								<img src="images/063_fdog.gif" style='float: left; border:0' height="150"/>
-								<img src="images/063_fdogs.gif" style='float: right; border:0' height="150"/>
+								<img src="images/063_fdog.gif" style='float: left; border:0; box-shadow: none' height="150"/>
+								<img src="images/063_fdogs.gif" style='float: right; border:0; box-shadow: none' height="150"/>
 							</div>
 						</p>
 						<div class="fragment roll-in">
@@ -273,18 +279,12 @@
 							<p style="font-size:10px"><i>Runtime of 6 randomly selected proteins using 4 CPUs</i></p>
 						</div>
 					</section>
-					<!-- <section>
-						<p style="font-size:20px">Get orthologous group</p>
-						<img src="images/044_og1.png" style='float: top; border:0' width=700/>
-						<img src="images/044_og2.png" style='float: top; border:0' width=700/ class="fragment roll-in">
-						<img src="images/044_og3.png" style='float: top; border:0' width=700/ class="fragment roll-in">
-					</section> -->
 				</section>
 
 				<!-- SLIDE 6 case study -->
 				<section>
 					<h5 style="color: white; background-color: #559951"><strong>An use-case: Where does the archaea locate</strong></h5>
-					<section>
+					<section data-transition="none">
 						<p><img src="images/071_hypotheses.png" style='float: top; border:0; box-shadow: none' height=350/></p>
 						<div class="caption" style="font-size:7px">Eme et al. (2017), Nat. Reviews Microbiology</div>
 						<ol style="list-style-type: lower-alpha;">
@@ -297,10 +297,10 @@
 							A schematic representation of our understanding of the relationships between eukaryotes and archaea over the past 40 years. In a three-domains tree of life (part a), Archaea and Eukarya each represent a monophyletic group and share a unique common ancestor to the exclusion of Bacteria2,3. By contrast, a two-domain tree of life was proposed early on, and the topology of this tree has undergone several changes.When the Archaea was thought to consist of the Euryarchaeota and the Crenarchaeota phyla only (part b), several kinds of molecular evidence supported the close relationship of eukaryotes and Crenarchaeota6,7. In the early 2010s, eukaryotes were found to branch within, or as sister to, the Thaumarchaeota, Aigarchaeota, Crenarchaeota and Korarchaeota (TACK) superphylum25,28–32(part c). Phylogenomic analyses that included members of the Asgard superphylum strongly suggested that eukaryotes originated from within the Asgard archaea or that they represented a sister group to them47,52(part d). Bacteria and Eukarya are indicated in light purple and red, respectively, whereas green and blue represent archaeal lineages. Domain and superphylum rank-level names are bolded or italicized, respectively. Names of proposed phyla are in quotation marks. Note that the Diapherotrites, Parvarchaeota, Aenigmarchaeota, Nanoarchaeota and Nanohaloarchaeota (DPANN) lineage is represented as a monophyletic lineage, although this is a topic of debate
 						</aside>
 					</section>
-					<section>
+					<section data-transition="none">
 						<img src="images/072_tree_reconstruction.jpg" style='float: top; border:0; box-shadow: none' height=400/>
 					</section>
-					<section>
+					<section data-transition="none">
 						<img src="images/073_phyloprofile.png" style='float: top; border:0; box-shadow: none' height=180/>
 						<ul>
 							<li style="font-size:15px" class="fragment roll-in">48 core genes (FAS >= 0.75, present in at least 50% taxa of each superkingdom)</li>
@@ -316,10 +316,10 @@
 							LG substitution with FreeRate model
 						</aside>
 					</section>
-					<section>
-						<p><img src="images/074_asgard_tree.jpg" style='float: top; border:0' height=600/></p>
+					<section data-transition="none">
+						<p><img src="images/074_asgard_tree.jpg" style='float: top; border:0; box-shadow: none' height=600/></p>
 					</section>
-					<section>
+					<section data-transition="none">
 						<p><img src="images/071_hypotheses.png" style='float: right; border:0; box-shadow: none' height=300/ class="fragment roll-in"></p>
 						<p><img src="images/075_asgard_tree_schematic.jpg" style='float: left; border:0; box-shadow: none' height=300/></p>
 					</section>
