--- a/slides/index.html
+++ b/slides/index.html
@@ -37,7 +37,7 @@
 				<!-- SLIDE 1 orthology -->
 				<section>
 					<h5 style="color: white; background-color: #559951"><strong>Orthology</strong></h5>
-					<section>
+					<section data-transition="none">
 						<p>Homology</p>
 						<img src="images/011_homology.png" style='float: top; border:0; box-shadow: none' height=250/>
 						<p>
@@ -154,9 +154,9 @@
 						</ul>
 					</section>
 					<section data-transition="none">
-						<img src="images/045_ec.png" style='float: top; border:0; box-shadow: none' height=200/>
-						<img src="images/046_go.png" style='float: top; border:0; box-shadow: none' height=200/ class="fragment roll-in">
-						<img src="images/047_tree.png" style='float: top; border:0; box-shadow: none' height=200/ class="fragment roll-in">
+						<img src="images/045_ec.png" style='float: left; border:0; box-shadow: none' height=200/>
+						<img src="images/046_go.png" style='float: right; border:0; box-shadow: none' height=200/ class="fragment roll-in">
+						<img src="images/047_tree.png" style='float: bottom; border:0; box-shadow: none' height=200/ class="fragment roll-in">
 					</section>
 
 					<aside class="notes">
