--- a/slides/index.html
+++ b/slides/index.html
@@ -57,7 +57,7 @@
 								<img src="images/013_tree_reconciliation.png" style='float: top; border:0; box-shadow: none' height=150/>
 								<div class="caption" style="font-size:7px">Mallo D. et al. (2016), Syst Biol</div>
 							</a>
-							<li style="font-size:20px; text-align:left">Functions transfering</li>
+							<li style="font-size:20px; text-align:left">Functional annotations transfer</li>
 							<li style="font-size:20px; text-align:left">...</li>
 						</p>
 					</section>
