--- a/slides/index.html
+++ b/slides/index.html
@@ -154,9 +154,9 @@
 						</ul>
 					</section>
 					<section data-transition="none">
-						<img src="images/045_ec.png" style='float: left; border:0; box-shadow: none' height=200/>
-						<img src="images/046_go.png" style='float: right; border:0; box-shadow: none' height=200/ class="fragment roll-in">
-						<img src="images/047_tree.png" style='float: bottom; border:0; box-shadow: none' height=200/ class="fragment roll-in">
+						<img src="images/045_ec.jpg" style='float: left; border:0; box-shadow: none' height=200/>
+						<img src="images/046_go.jpg" style='float: right; border:0; box-shadow: none' height=200/ class="fragment roll-in">
+						<img src="images/047_tree.jpg" style='float: bottom; border:0; box-shadow: none' height=200/ class="fragment roll-in">
 					</section>
 
 					<aside class="notes">
@@ -214,7 +214,7 @@
 						<img src="images/055_pvalue_vs_dlogl.png" style='float: top; border:0; box-shadow: none' height=350>
 					</section>
 					<section data-transition="none">
-						<img src="images/056_concord.png" style='float: top; border:0; box-shadow: none' height=300>
+						<img src="images/056_concord.png" style='float: top; border:0; box-shadow: none' height=400>
 					</section>
 				</section>
 
